--- a/src/views/base.njk
+++ b/src/views/base.njk
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{% block description %}A private and secure search engine{% endblock %}">
+  
+  <meta property="og:title" content="{% block og_title %}{{ self.title() }}{% endblock %}">
+  <meta property="og:description" content="{{ self.description() }}">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Seek">
+  
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="{{ self.og_title() }}">
+  <meta name="twitter:description" content="{{ self.description() }}">
+  
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <title>{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="/css/theme.css">
